# keel

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONSTITUTION.md  Cargo.toml  MANIFESTO.md  README.md  flake.nix  justfile
.github/workflows/: ci.yml
.keel/: README.md  flow_history.json
.keel/knowledge/: 0LMiWqrFa.md  0MWoLPhDL.md  1ejHEDO4x.md  1jCvlheVL.md  1vyDuw12T.md  1vyDuw2wf.md  1vyDuw41L.md  1vyDuw5Ob.md  1vyDuw8wW.md  1vyDuw9iN.md  1vyDuwBAC.md  1vyDuwBZS.md  1vyDuwBfG.md  1vyDuwCgL.md  1vyDuwDTq.md  1vyDuwE2r.md  1vyDuwFj5.md  1vyDuwGDS.md  1vyDuwGh9.md  1vyDuwJXq.md  1vyDuwLCH.md  1vyDuwLDX.md  1vyDuwLvf.md  1vyDuwMlz.md  1vyDuwPS4.md  1vyDuwSPf.md  1vyDuwSon.md  1vyDuwUSB.md  1vyDuwUUO.md  1vyDuwXBN.md  1vyDuwXCw.md  1vyDuwZW6.md  1vyDuwbHB.md  1vyDuwdbL.md  1vyDuwdhQ.md  1vyDuwf3P.md  1vyDuwgcV.md  1vyDuwiA5.md  1vyDuwiKv.md  1vyDuwiVQ.md  (+70 more)
nix/: keel.nix
src/: architecture_contract_tests.rs  cli_tests.rs  command_regression_tests.rs  drift_tests.rs  lib.rs  main.rs  test_helpers.rs
src/application/: artifact_created_at_backfill.rs  domain_events.rs  knowledge_context.rs  mod.rs  ports.rs  process_manager.rs  started_at_backfill.rs  story_lifecycle.rs  voyage_epic_lifecycle.rs
src/cli/: command_tree.rs  mod.rs  runtime.rs  style.rs  table.rs
src/domain/: mod.rs
src/infrastructure/: artifact_frontmatter.rs  config.rs  duplicate_ids.rs  frontmatter_mutation.rs  fs_adapters.rs  loader.rs  mod.rs  parser.rs  scoring.rs  story_id.rs  template_rendering.rs  templates.rs  throughput_history_store.rs  utils.rs
src/read_model/: bearing_show.rs  mod.rs  (+11 more)
(+818 files in other folders)
