[package]
name = "keel"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/rupurt/keel"
description = "Fast CLI for project board management"

[[bin]]
name = "keel"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
dirs = "6"
rayon = "1"
regex = "1"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
terminal_size = "0.4"
wait-timeout = "0.2"
notify = "8"
notify-debouncer-mini = "0.5"
ctrlc = "3"
owo-colors = "4.2.3"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "parsing", "regex-fancy"] }
tempfile = "3"

[dev-dependencies]
